fixed some of the backgrounds not being full height + fixed cards overlapping the inputs on mobile

--- a/src/styles/components/CharacterCard.module.css
+++ b/src/styles/components/CharacterCard.module.css
@@ -26,6 +26,16 @@
 /*______________________________________________________________________________________
     ===== Styles for the section =====
 */
+.characterCardsInputs{
+    height: 77px;
+}
+
+@media only screen and (max-width: 767px){
+    .characterCardsInputs{
+        height: 308px;
+    }
+}
+
 .characterCardsSection{
     display: grid;
 }
